# Hypersphere

./: .gitignore  CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  ParamPanel.cpp  ParamPanel.h  ViewportWidget.cpp  ViewportWidget.h  main.cpp
src/core/eval/: Cooker.cpp  Cooker.h
src/core/geo/: Geometry.cpp  Geometry.h
src/core/graph/: Graph.cpp  Graph.h  Node.cpp  Node.h  NodeRegistry.cpp  NodeRegistry.h
src/core/ops/: GridSop.cpp  GridSop.h  MergeSop.cpp  MergeSop.h  NullSop.cpp  NullSop.h  TransformSop.cpp  TransformSop.h
src/ui/: ConnectionItem.cpp  ConnectionItem.h  NodeGraphView.cpp  NodeGraphView.h  NodeItem.cpp  NodeItem.h
